# continuous-timeseries

./: .copier-answers.yml  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-docs-locked.txt  requirements-incl-optional-locked.txt  requirements-locked.txt  requirements-only-tests-full-locked.txt  requirements-only-tests-locked.txt  requirements-only-tests-min-locked.txt  requirements-upstream-dev.txt  scratch.py
.github/workflows/: bump.yaml  ci.yaml  deploy.yaml  install-pypi.yaml  release.yaml  test-upstream-latest.yaml
accessor-handler/: .copier-answers.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  duties.py  mkdocs.yml  pyproject.toml
accessor-handler/.github/: FUNDING.yml
accessor-handler/config/: ruff.toml
accessor-handler/scripts/: gen_credits.py  get_version.py  make
accessor-handler/tests/: __init__.py  conftest.py  test_themes.py
changelog/: 1.trivial.md  11.trivial.md  12.docs.md  12.feature.md  12.trivial.md  13.feature.md  14.docs.md  14.feature.md  15.docs.md  15.feature.md  15.trivial.md  16.docs.md  16.feature.md  16.trivial.md  17.trivial.md  18.docs.md  18.feature.md  18.trivial.md  19.breaking.md  19.docs.md  19.improvement.md  2.trivial.md  20.trivial.md  21.trivial.md  22.docs.md  23.trivial.md  24.trivial.md  26.feature.md  27.trivial.md  29.docs.md  29.fix.md  29.trivial.md  3.trivial.md  30.trivial.md  31.trivial.md  33.fix.md  34.trivial.md  35.fix.md  36.feature.md  37.trivial.md  (+7 more)
docs/: NAVIGATION.md  changelog.md  development.md  gen_doc_stubs.py  griffe-ext.py  griffe_ext.py  installation.md  pandas-accessors.md
docs/further-background/: dependency-pinning-and-testing.md  discrete_to_continuous_conversions.py  index.md  representations.py  testing-strategy.md  why-this-api.py
docs/how-to-guides/: basic-calculation.md  how-to-make-a-step-forcing.py  index.md  run-code-in-a-notebook.py
mkdocstrings-python-accessors/: README.md  pyproject.toml
mkdocstrings-python-accessors/src/mkdocstrings_handlers/python_accessors/: __init__.py
scripts/: changelog-to-release-template.py  scratch.py  test-install.py
tests/: conftest.py
(+83 files in other folders)
